[MIRO Desktop launcher] Fix native select background in dark mode
- The native select did not switch the background color in dark mode on Windows

--- a/css/styles.css
+++ b/css/styles.css
@@ -1004,3 +1004,8 @@ select.form-control, select.form-control:focus {
   color: unset;
   background-color: unset;
 }
+@media (prefers-color-scheme: dark) {
+    select.form-control, select.form-control:focus {
+      background-color: #393e46;
+    }
+}
